src/objects/Supplies_and_Equipment__c.object
<CustomObject>
    <customHelpPage>Help_Supplies_and_Equipment_VF</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(ISNULL( End_Date__c ),
      Start_Date__c  &lt;= Today(), 
      AND(  Start_Date__c &lt;= Today(),  End_Date__c &gt;= Today()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Supplies and Equipment</relationshipLabel>
        <relationshipName>Supplies_and_Equipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <encrypted>true</encrypted>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_Date_Reason__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>End Date Reason needs to be completed if you enter an end date.</inlineHelpText>
        <label>End Date Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_government_service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-government-service indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encrypted>true</encrypted>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <encrypted>true</encrypted>
        <label>Org. that provides Equipment/Supplies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_and_Support_Type__c</fullName>
        <encrypted>true</encrypted>
        <label>Device / Equipment / Supplies Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <formula>IF( ISBLANK( End_Date__c ) , 
-1000000-(TODAY()- Start_Date__c ), 
TODAY() - Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Supplies and Equipment</label>
    <nameField>
        <displayFormat>SEL-{0000}</displayFormat>
        <label>Supplies and Equipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplies and Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_greater_than_Start_Date</fullName>
        <active>true</active>
        <description>End date should always be equal to or greater than the start date by definition</description>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Service End Date should always be equal to or greater than the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_requires_End_Date_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL( End_Date__c )), ISBLANK( End_Date_Reason__c ))</errorConditionFormula>
        <errorDisplayField>End_Date_Reason__c</errorDisplayField>
        <errorMessage>Please enter a reason for the end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Owner_and_Internal_can_Edit</fullName>
        <active>true</active>
        <description>Only the record creator or a System Administrator can edit this record.</description>
        <errorConditionFormula>AND 
( 
NOT(ISNEW()),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;STADD Director&quot;,
$Profile.Name &lt;&gt; &quot;STADD Project Administrator&quot;, 
CreatedById &lt;&gt; $User.Id    
)</errorConditionFormula>
        <errorMessage>Only the record creator or a System Administrator can edit this record.</errorMessage>
    </validationRules>
</CustomObject>